--- a/regression_models.Rmd
+++ b/regression_models.Rmd
@@ -74,6 +74,8 @@ tabyl(power_victoria_merged_updated$gender_check)
 power_victoria_merged_filtered <- power_victoria_merged_updated %>% filter(gender_check == 1)
 
 write_csv(power_victoria_merged_filtered, "power_victoria_merged_filtered.csv")
+
+tabyl(power_victoria_merged_filtered$summary_count)
 ```
 
 ## Traditional regression using lm function for survey data + plot
@@ -180,6 +182,76 @@ nb_regression_2 <- glm.nb(summary_count ~ percent + gender_updated + age_categor
 summary(nb_regression_2)
 ```
 
+## Checking assumptions for negative binomial filtered model
+```{r}
+poisson_regression <- glm(summary_count ~ percent + gender_updated + age_categories + ethnicity_updated + income_2 + mean_temp_date + total_precip_date, family = "poisson", data = power_victoria_merged_filtered)
+summary(poisson_regression)
+
+pchisq(2 * (logLik(nb_regression_2) - logLik(poisson_regression)), df = 1, lower.tail = FALSE)
+```
+
+## Confidence interavls
+```{r}
+est <- cbind(Estimate = coef(nb_regression_2), confint(nb_regression_2))
+incident_rate_ratios <- exp(est)
+```
+
+## Recoding to numeric for plotting 
+```{r}
+tabyl(power_victoria_merged_filtered$income_2)
+
+power_victoria_merged_filtered <- power_victoria_merged_filtered %>% mutate(ethnicity_1 = case_when(
+  ethnicity_updated == "Caucasian" ~ 1,
+  ethnicity_updated == "Racialized Group" ~ 2
+))
+
+power_victoria_merged_filtered <- power_victoria_merged_filtered %>% mutate(gender_1 = case_when(
+  gender_updated == "Men" ~ 1,
+  gender_updated == "Women" ~ 2
+))
+
+power_victoria_merged_filtered <- power_victoria_merged_filtered %>% mutate(age_categories_1 = case_when(
+  age_categories == "20-29" ~ 1,
+  age_categories == "30-39" ~ 2,
+  age_categories == "40-49" ~ 3,
+  age_categories == "50-59" ~ 4,
+  age_categories == "60+" ~ 5,
+))
+
+power_victoria_merged_filtered <- power_victoria_merged_filtered %>% mutate(income_3 = case_when(
+  income_2 == "$49,000 or less" ~ 1,
+  income_2 == "$50,000 to $99,999" ~ 2,
+  income_2 == "$100,000 to $150,000" ~ 3,
+  income_2 == "$150,000 or more" ~ 4,
+  income_2 == "I don't know/Prefer not to answer" ~ 5,
+))
+
+```
+
+##Plotting Regression
+```{r}
+ggplot(power_victoria_merged_filtered, aes(y = 
+      summary_count, x = percent + ethnicity_1 + gender_1 + age_categories_1 + income_3 + mean_temp_date +
+        total_precip_date)) + 
+          geom_point() +
+            geom_smooth(method = "glm.nb") +
+               labs(title = "Exposure to Pandora protected cycling lane and Physical Activity (Activity Counts)",
+                 x = "Predictor Variables (Exposure, Ethnicity, Gender, Age, Income, Mean temperature, Total Precipitation (mm)",
+                 y = "Activity Counts")
+```
+
+```{r}
+ggplot(power_victoria_merged_filtered, aes(y = 
+      summary_count, x = percent)) + 
+          geom_point() +
+            geom_smooth(method = "glm.nb") +
+               labs(title = "Exposure to Pandora protected cycling lane and Physical Activity (Activity Counts)",
+                 x = "Exposure to Pandora (Percentage of total points",
+                 y = "Activity Counts")
+```
+
+
+
 ## Negative binomial regression with filtered summary count data
 ```{r}
 summary_count <- tabyl(power_victoria_merged_filtered$summary_count)
@@ -202,4 +274,13 @@ summary(filtered_power$summary_count)
 sd(filtered_power$summary_count)
 ```
 
+
+## Zero-inflated Negative Binomial Regression
+```{r}
+library(MASS)
+install.packages("pscl")
+library(pscl)
+library(boot)
+model_1 <- zeroinfl(summary_count ~ percent, data = power_victoria_merged_filtered, dist = "negbin", EM = TRUE)
+```
 
