--- a/regression_models_updated.Rmd
+++ b/regression_models_updated.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "regression_models"
+title: "regression_models_updated"
 author: "Melissa Tobin"
-date: "19/06/2019"
-output:   
+date: "02/07/2019"
+output: 
   html_document:
         keep_md: true
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -60,48 +61,7 @@ require(plyr)
 ```{r}
 victoria_small_merged_1 <- fread("victoria_small_merged_1.csv")
 
-power_victoria_merged_updated <- fread("power_victoria_merged_updated.csv") #big file with all summary counts
-table_of_power_merged_2 <- fread("table_of_power_merged_2.csv")
-summary_power_victoria_merged_updated <- fread("summary_power_victoria_merged_updated.csv") #summary table with summarized PA
-```
-
-## Variables
-```{r}
-power_victoria_merged_updated$income_2 <- factor(power_victoria_merged_updated$income_2, c("$49,000 or less", "$50,000 to $99,999", "$100,000 to $149,999", "$150,000 or more", "I don't know/Prefer not to answer")) 
-
-tabyl(power_victoria_merged_updated$income_2)
-
-power_victoria_merged_filtered <- power_victoria_merged_updated %>% filter(gender_check == 1)
-
-write_csv(power_victoria_merged_filtered, "power_victoria_merged_filtered.csv")
-
-tabyl(power_victoria_merged_filtered$summary_count)
-
-summary_power_victoria_merged_filtered <- summary_power_victoria_merged_updated %>% filter(gender_check == 1)
-write_csv(summary_power_victoria_merged_filtered, "summary_power_victoria_merged_filtered.csv")
-```
-
-## Traditional regression using lm function for survey data + plot
-```{r}
-regression_1 <- lm(total_pa_met_formula ~ percent, data = victoria_small_merged_1)
-
-summary(regression_1)
-lm.beta(regression_1) ##This isn't working. 
-confint(regression_1)
-#plot(regression_1
-
-ggPredict(regression_1, se = TRUE, interactive = TRUE)
-```
-
-## Regression Model with Survey Data - Final Fit Package
-```{r}
-victoria_small_merged_1 <- victoria_small_merged_1 %>% 
-                              mutate_at(vars(income_2, age_categories, ethnicity_updated), as.factor)
-
-explanatory = c("percent", "gender_updated", "age_categories", "ethnicity_updated", "income_2", "mean_temp_date", "total_precip_date")
-dependent = "total_pa_met_formula"
-victoria_small_merged_1 %>% finalfit(dependent, explanatory) -> t1
-knitr::kable(t1, row.names = FALSE, align = c("l", "l", "r", "r", "r")) 
+power_victoria_merged_filtered <- fread("power_victoria_merged_filtered.csv")
 ```
 
 ## Regression Model (lm) with self-report PA and all predictors 
@@ -123,58 +83,43 @@ plot(lm_1_plot)
 ##This plot works but only has exposure and outcome. I don't know how to include all predictor variables
 ```
 
-## Regression Model with summary accelerometer data
+## Checking assumptions for linear regression
 ```{r}
-summary_power_victoria_merged_updated <- summary_power_victoria_merged_updated %>% 
-                              mutate_at(vars(income_2, age_categories, ethnicity_updated), as.factor)
-explanatory = c("percent", "gender_updated", "age_categories", "ethnicity_updated", "income_2", "mean_temp_date", "total_precip_date")
-dependent = "total_pa"
-summary_power_victoria_merged_updated %>% finalfit(dependent, explanatory) -> t2
-knitr::kable(t2, row.names = FALSE, align = c("l", "l", "r", "r", "r")) 
+victoria_small_merged_1$residuals <- resid(lm_1, na.rm = TRUE)
+victoria_small_merged_1$standardized.residuals <- rstandard(lm_1)
+victoria_small_merged_1$studentized.residuals <- rstudent(lm_1) 
+victoria_small_merged_1$cooks.distance <- cooks.distance(lm_1) 
+
+durbinWatsonTest(lm_1) #checking for independence
+vif(lm_1)
+1/vif(lm_1)
+mean(vif(lm_1))
+plot(lm_1)
 ```
 
-## Simple regression plot for summary accelerometer data
+## Plotting Residuals
 ```{r}
-ggplot(summary_power_victoria_merged_updated, aes(y = total_pa, x = percent)) + 
-  geom_point() +
-  geom_smooth(method = "lm")
+residual_plot <- ggplot(victoria_small_merged_1, aes(standardized.residuals)) + geom_density() +
+                  geom_vline(xintercept = 2, colour = "red") + geom_vline(xintercept = -2, colour= "red") +
+                    labs(title = "Standardized Residuals Plot", x = "Standarized Residuals",
+                      y = "Density (% of Participants)")
+
+plot(residual_plot)
+
+tabyl(victoria_small_merged_1$standardized.residuals)
 ```
 
-## Regression Model with summary_counts as outcome variable - from accelerometer data
+## Cook's Plot
 ```{r}
-power_victoria_merged_filtered <- power_victoria_merged_filtered %>% 
-                              mutate_at(vars(income_2, age_categories, ethnicity_updated), as.factor)
-explanatory = c("percent", "doy_1", "gender_updated", "age_categories", "ethnicity_updated", "income_2", "mean_temp_date", "total_precip_date")
-dependent = "summary_count"
-power_victoria_merged_filtered %>% finalfit(dependent, explanatory) -> t3
-knitr::kable(t3, row.names = FALSE, align = c("l", "l", "r", "r", "r")) 
+cooks_plot <- ggplot(victoria_small_merged_1, aes(cooks.distance)) +
+                geom_density() +
+                geom_vline(xintercept = 1, colour = "red") +
+                labs(title = "Cooks Plot", 
+                     x = "Cooks Distance",
+                     y = "Density (% of Participants")
+plot(cooks_plot)
 ```
 
-## Making plots for regression - accelerometer data
-```{r}
-pa_regression_1 <- lm(summary_count ~ percent,  data = power_victoria_merged_filtered)
-
-summary(pa_regression_1)
-lm.beta(pa_regression_1) ##This isn't working. 
-confint(pa_regression_1)
-
-ggplot(power_victoria_merged_filtered, aes(y = summary_count, x = percent)) + 
-  geom_point() +
-  geom_smooth(method = "lm")
-```
-
-## Analyzing the regression data more closely 
-```{r}
-summary(power_victoria_merged_filtered$summary_count)
-sd(power_victoria_merged_filtered$summary_count, na.rm = TRUE)
-describeBy(power_victoria_merged_filtered$summary_count)
-summary_counts_plot <- ggplot(power_victoria_merged_filtered) + 
-                          geom_histogram(aes(summary_count), bins = 50) +
-                            labs(title = "Accelerometer Activity Counts",
-                             x = "Activity Count",
-                             y = "Number of Counts (n)")
-plot(summary_counts_plot)
-```
 
 ## Negative binomial regression with just percent and summary count
 ```{r}
@@ -258,36 +203,5 @@ ggplot(power_victoria_merged_filtered, aes(y =
                labs(title = "Exposure to Pandora protected cycling lane and Physical Activity (Activity Counts)",
                  x = "Exposure to Pandora (Percentage of total points",
                  y = "Activity Counts")
-```
-
-## Negative binomial regression with filtered summary count data
-```{r}
-summary_count <- tabyl(power_victoria_merged_filtered$summary_count)
-tail(summary_count$`power_victoria_merged_filtered$summary_count`)
-
-filtered_power <- power_victoria_merged_filtered %>% filter(summary_count <= 10000)
-
-filtered_counts_plot <- ggplot(filtered_power) + 
-                          geom_density(aes(summary_count), bins = 50)
-
-plot(filtered_counts_plot)
-
-nb_regression_filtered <- glm.nb(summary_count ~ percent, data = filtered_power)
-summary(nb_regression_filtered)
-
-nb_regression_2_filtered <- glm.nb(summary_count ~ percent + gender_updated + age_categories + ethnicity_updated + income_2 + mean_temp_date + total_precip_date, data = filtered_power)
-summary(nb_regression_2_filtered)
-
-summary(filtered_power$summary_count)
-sd(filtered_power$summary_count)
-```
-
-## Zero-inflated Negative Binomial Regression
-```{r}
-library(MASS)
-install.packages("pscl")
-library(pscl)
-library(boot)
-model_1 <- zeroinfl(summary_count ~ percent, data = power_victoria_merged_filtered, dist = "negbin", EM = TRUE)
 ```
 
